[package]
name = "leaktest"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/sender.rs"
name = "sender"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[[bin]]
name = "nonet"
path = "src/nonet.rs"

[[bin]]
name = "tokio"
path = "src/tokio.rs"

[[bin]]
name = "combined"
path = "src/combined.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
opendal = { version = "0.55", features = ["services-s3"] }
futures = "0.3"
reqwest = { version = "0.12.28", default-features = false, features = ["charset", "http2", "default-tls", "json"]}
reqsign = { version = "0.16.5", features = ["services-aws"] }
rustls = { version = "0.23.36", default-features = false, features = [ "aws-lc-rs" ] }
cap = "0.1.2"
tokio-stream = "0.1.18"
bytes = "1.11.1"
chrono = "0.4.43"
